# codecrafters-grep-c

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  matcher.c  matcher.h  test_main.c
